<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:background="@drawable/frame_background"
        android:weightSum="1"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shadowColor="@color/colorBlack"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:text="@string/inputText"/>

        <EditText
            android:gravity="center"
            android:id="@+id/inputText"
            android:background="@drawable/edit_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:padding="25dp"
            android:hint="@string/inputInstruction"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">


            <CheckBox
                android:id="@+id/uppercaseCheck"
                android:buttonTint="@color/colorBlack"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/uppercase"/>

            <ImageView
                android:id="@+id/resetButton"
                android:onClick="onButtonClick"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/refresh"
                android:gravity="center"/>

            <Button
                android:id="@+id/convertButton"
                android:onClick="onButtonClick"
                android:padding="2dp"
                android:layout_marginStart="10dp"
                android:text="@string/generate"
                android:singleLine="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:text="@string/outputText"/>

        <EditText
            android:gravity="center"
            android:id="@+id/outputText"
            android:background="@drawable/edit_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:padding="25dp"
            android:hint="@string/outputHint"
            android:inputType="text" />

    </LinearLayout>

</LinearLayout>